fixed .hero (align)
class discussion

--- a/style.css
+++ b/style.css
@@ -1,145 +1,156 @@
 /* browses by default create a gap. */
+/* css reset. Always have this at the top of your css code. */
 * {
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
 h1{
-    color: rgb(131, 50, 0);
-    margin-top: 50px;
-    margin-left: 100px;
+  /* text-align: center; */
+  color: rgb(131, 50, 0);
+  margin-top: 50px;
+  margin-left: 100px;
+  user-select: none;
 }
 
+/* image behind title, container that holds the title */
 .hero{
-    text-align: center;
-    height: 400px;
-    border: 1px solid black;
-    /* 4th 000 is black and the 4th parameter is a transparity a degree of 0-1 */
-    background: url(./assets-recipes/macaron.jpeg) center center no-repeat;
-    /* center center for the x and y axis */
-    background-size: cover;
+  text-align: center;
+  height: 400px;
+  width:  100%;
+  /* width, type (design), colour */
+  border: 10px solid rgb(255, 228, 189);
+  /* 4th 000 is black and the 4th parameter is a transparity a degree of 0-1 */
+  background: url(./assets-recipes/macaron.jpeg) center center no-repeat;
+  /* center center for the x and y axis */
+  background-size: cover;
+  /* gives us some options and access to handy rules - one of those centers things inside containers. */
+  display: flex;
+  /* turns the row (vertical stuff) 90% so that it stucks up instead */
+  flex-direction: column;
+  /* vertical stuff */
+  justify-content: center;
+  align-items: center;
 }
 
 /* only with the class .hero-title */
 .hero-title {
-    color:rgb(255, 228, 189);
-    border: 1px solid black;
-    font-size: 120px;
-    /* line style, solid, dash */
+  color:rgb(255, 228, 189);
+  font-size: 120px;
+  /* line style, solid, dash */
 }
 
 .anchor{
-    margin-left: 250px;
-    color: rgb(169, 100, 16);
+  margin-left: 250px;
+  color: rgb(169, 100, 16);
 }
 
 p{
-    text-align: left;
-    color: rgb(149, 6, 6);
-    margin-left: 100px;
+  text-align: left;
+  color: rgb(149, 6, 6);
+  margin-left: 100px;
 }
 
 /* // <uniquifier>: Use a unique and descriptive class name
 // <weight>: Use a value from 100 to 900 */
 
 .alice-regular-font {
-  font-family: "Alice", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+font-family: "Alice", serif;
+font-optical-sizing: auto;
+font-weight: 400;
+font-style: normal;
 }
 
 .navbar {
-    /* display to tell containers how to display the things inside of them. */
-    /* to make them be beside of eachother */
-    display: flex;
-    /* display flex and justify-content go together. */
-    justify-content: centre;
-    background-color: rgb(147, 98, 67);
-    border: 1px solid black;
-
+  /* display to tell containers how to display the things inside of them. */
+  /* to make them be beside of eachother */
+  display: flex;
+  /* display flex and justify-content go together. */
+  justify-content: centre;
+  background-color: rgb(239, 202, 147);
+  border: 1px solid black;
 }
 
 .nav-link {
-    border: 1px solid tomato;
-    background-color: rgb(255, 209, 231);
-    color: tomato;
-    margin: 15px;
-    padding-left: 5px;
-    padding-right: 5px;
-    /* get rid of underlines */
-    text-decoration: none;
-    /* get rid of bullet points from list */
-    font-size: 20px;
-    font-weight: 700;
-    margin: center auto;
+  border: 1px solid tomato;
+  background-color: rgb(255, 209, 231);
+  color: tomato;
+  padding-left: 25px;
+  padding-right: 25px;
+  /* get rid of underlines */
+  text-decoration: none;
+  /* get rid of bullet points from list */
+  font-size: 20px;
+  font-weight: 700;
+  margin: center auto;
+}
+
+.nav-link-center{
+padding-left: 30px;
+padding-right: 30px;
+}
+
+.nav-link-left{
+margin-left: 750px;
+padding-left: 30px;
+padding-right: 30px;
+}
+
+.nav-link-right{
+margin-right: 150px;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 /* whenever the mouse hovers over the link, it is going to change the css rules. */
 .nav-link:hover {
-    color: rgb(157, 47, 27);
-    background-color: rgb(208, 154, 89);
-    transition: 1.8s;
+  color: rgb(157, 47, 27);
+  background-color: rgb(208, 154, 89);
+  transition: 1.8s;
 }
 
+/* image cards */
 img {
-    width: 270px;
-    height: 200px;
-    display: inline-block;
-    margin-right: 150px;
-    border-radius: 20%;
-    border: 5px solid rgb(147, 98, 67);
-    margin-right: 100px;
-    margin-left: 20px
+  width: 270px;
+  height: 200px; */
+  display: flex;
+  justify-content: space-between;
+  margin-right: 150px;
+  border: 5px solid rgb(147, 98, 67);
+  margin-right: 100px;
+  margin-left: 20px;
+  border-radius: 20%;
 }
 
-.example {
-    background-color: greenyellow;
-    width: 100px;
-    text-align: center;
-    border: 2px solid blue;
-    padding: 50px;
-    margin-top: 80px;
-    margin-left: 50px;
-  }
+figure { 
+  border: 1px;
+  padding: 4px;
+  margin: auto;
+}
 
-  figure { 
-    border: 1px;
-    padding: 4px;
-    margin: auto;
-  }
+.recipe-title {
+  text-align: justify;
+  width: 270px;
+}
 
-  figcaption {
-    background-color: rgb(255, 204, 141);
-    color: white;
-    font-style: italic;
-    padding: 2px;
-    text-align: center;
-  }
+h2 {
+  color: rgb(131, 50, 0);
+  margin-top: 50px;
+  margin-left: 100px;
+  font-weight: 900px;
+  text-align: center;
+}
 
-  .recipe-title {
-    text-align: justify;
-    width: 270px;
-  }
+.description {
+  text-align: center;
+}
 
-  h2 {
-    color: rgb(131, 50, 0);
-    margin-top: 50px;
-    margin-left: 100px;
-    font-weight: 900px;
-    text-align: center;
-  }
+.recipe-button {
+  text-align: center;
+  margin-left: 400px;
+}
 
-  .description {
-    text-align: center;
-  }
-
-  .recipe-button {
-    text-align: center;
-    margin-left: 400px;
-  }
-
+/* flexbox */
